force-app/main/default/objects/Billing_Product__c.object
<CustomObject>
    <description>Read Only object to store actual plan / rate data from CAPS so it can easily be seen and reported on in Salesforce.</description>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEid ( Billing_Group__r.Account__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Group__c</fullName>
        <label>Billing Group</label>
        <referenceTo>Billing_Group__c</referenceTo>
        <relationshipLabel>Billing Products</relationshipLabel>
        <relationshipName>Billing_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CAPS_Package_ID__c</fullName>
        <label>CAPS Package ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complementary_Coverage_Code__c</fullName>
        <label>Complementary Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <label>Contract Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental_Coverage_Code__c</fullName>
        <label>Dental Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drug_Coverage_Code__c</fullName>
        <label>Drug Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Family_Total__c</fullName>
        <label>Family Total</label>
        <summarizedField>Billing_Product_Detail__c.Family__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Med_Coverage_Code__c</fullName>
        <label>Med Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Count__c</fullName>
        <label>Member Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Billing Products</relationshipLabel>
        <relationshipName>Billing_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Single_Total__c</fullName>
        <label>Single Total</label>
        <summarizedField>Billing_Product_Detail__c.Single__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Child_Total__c</fullName>
        <label>Sub / Child Total</label>
        <summarizedField>Billing_Product_Detail__c.Sub_Child__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Children_Total__c</fullName>
        <label>Sub / Children Total</label>
        <summarizedField>Billing_Product_Detail__c.Sub_Children__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sub_Spouse_Total__c</fullName>
        <label>Sub / Spouse Total</label>
        <summarizedField>Billing_Product_Detail__c.Sub_Spouse__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Subscriber_Count__c</fullName>
        <label>Subscriber Count</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Two_Party_Total__c</fullName>
        <label>Two Party Total</label>
        <summarizedField>Billing_Product_Detail__c.Two_Party__c</summarizedField>
        <summaryForeignKey>Billing_Product_Detail__c.Billing_Product__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vision_Coverage_Code__c</fullName>
        <label>Vision Coverage Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Billing Product</label>
    <nameField>
        <label>Billing Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>