force-app/main/default/objects/Billing_Product__c/fields/Ancillary_Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Coverage_Code__c</fullName>
    <label>Ancillary Coverage Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>